# mailing_service_django

./: .dockerignore  .env.sample  .flake8  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: celery.py  settings.py  urls.py
notifications/: apps.py  models.py  serializers.py  tasks.py  urls.py  utils.py  validators.py  views.py
notifications/migrations/: 0001_initial.py
